--- a/index.html
+++ b/index.html
@@ -8,42 +8,52 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/reset.css">
   <title>About</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="background: red;">Luis Martinez</a>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
-  </nav>
-<div class="container">
-  <div class="jumbotron jumbotron-fluid" style="background: white;">
-    
-      <div class="row">
-        <div class="col-md-12" style="background: white;"></div>
+  <div class="container" style="background: dimgray;">
+    <div class="row">
+      <div class="col-md-4">
+        <nav class="navbar">
+          <a class="navbar-brand" href="#" style="background: red;">Luis Martinez</a>
       </div>
-      <div class="row">
-        <div class="col-md-4" style="background-color: white;">
-        </div>
-        <div class="col-md-4">
-          <h1 class="display-4" style="font-size: 20px;">About Me</h1>
-          <hr>
-          <img src="https://via.placeholder.com/150" style="width: 100px; height: 100px;">
-          <p class="lead"></p>
-        </div>
-       <div class="col-md-4" style="background: white;"></div>
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        </nav>
+      </div>
     </div>
   </div>
+  <div class="container">
+    <div class="jumbotron jumbotron-fluid" style="background:rgb(82, 82, 82);">
+
+      <div class="row">
+        <div class="col-md-12" style="background:rgb(82, 82, 82);"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4" style="background-color: rgb(83, 83, 83);">
+        </div>
+        <div class="col-md-4">
+          <h1 class="display-4" style="font-size: 20px; background: dimgray;">About Me</h1>
+          <hr>
+          <img src="https://via.placeholder.com/150" style="width: 100px; height: 100px;">
+          <p class="lead" style="background: grey;"></p>
+        </div>
+        <div class="col-md-4" style="background: rgb(82, 82, 82);"></div>
+      </div>
+    </div>
   </div>
   <div class="footer" style="border-style: solid; border-width: 10px 0px 0px 0px; border-color: red;">Copyright ©
   </div>
