--- a/index.html
+++ b/index.html
@@ -13,29 +13,21 @@
 </head>
 
 <body>
-  <div class="container" style="background: dimgray;">
-    <div class="row">
-      <div class="col-md-4">
-        <nav class="navbar">
+        <nav class="navbar" style="background: dimgray ;">
           <a class="navbar-brand" href="#" style="background: red;">Luis Martinez</a>
-      </div>
-      <div class="col-md-4"></div>
-      <div class="col-md-4">
+      
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
+            <a class="nav-link active" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
         </nav>
-      </div>
-    </div>
-  </div>
   <div class="container">
     <div class="jumbotron jumbotron-fluid" style="background:rgb(82, 82, 82);">
 
