Added div container to index.html. Added links to other html pages

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <title>About</title>
 </head>
 
-<body>
+<body style="background-image: url(Images/dark-honeycomb.png);">
         <nav class="navbar" style="background: dimgray ;">
-          <a class="navbar-brand" href="#" style="background: red;">Luis Martinez</a>
+          <a class="navbar-brand" style="background: red; color: white;">Luis Martinez</a>
       
-        <ul class="nav justify-content-end">
+        <ul class="nav justify-content-end" style="float: left;">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">About</a>
+            <a class="nav-link active" href="index.html" style="color: white;">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html" style="color: white;">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html" style="color: white;">Contact</a>
           </li>
         </ul>
         </nav>
