--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       </li>
     </ul>
   </nav>
-  <div class="container">
+  <div class="container" style="background-color: dimgray;">
   <form>
       <div class="form-group">
         <label for="exampleFormControlInput1">Email address</label>
