--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,10 @@
   <div class="container" style="background-color: dimgray;">
   <form>
       <div class="form-group">
+          <label for="exampleFormControlInput1">Name</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
+        </div>
+      <div class="form-group">
         <label for="exampleFormControlInput1">Email address</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
       </div>
@@ -36,6 +40,7 @@
         <label for="exampleFormControlTextarea1">Example textarea</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
   <div class="footer" style="border-style: solid; border-width: 10px 0px 0px 0px; border-color: red;">Copyright ©
