Made changes to navbar in order to fix background colors. Added paragraph information and profile picture to file

--- a/index.html
+++ b/index.html
@@ -8,45 +8,39 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
   <title>About</title>
 </head>
 
 <body style="background-image: url(Images/dark-honeycomb.png);">
-        <nav class="navbar" style="background: dimgray ;">
-          <a class="navbar-brand" style="background: red; color: white;">Luis Martinez</a>
-      
-        <ul class="nav justify-content-end" style="float: left;">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html" style="color: white;">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html" style="color: white;">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html" style="color: white;">Contact</a>
-          </li>
-        </ul>
-        </nav>
-  <div class="container">
-    <div class="jumbotron jumbotron-fluid" style="background:rgb(82, 82, 82);">
-
+  <div class="container-fluid myNav">
       <div class="row">
-        <div class="col-md-12" style="background:rgb(82, 82, 82);"></div>
+          <div class="col-md-2"></div>
+          <div class="col-md-2 text-center" style="color: white; background-color: red; font: size 20px;">Luis Martinez</div>
+          <div class="col-md-4"></div>
+          <div class="col-sm-12 col-md-4 text-center">
+              <div class="row">
+                  <div class="col-sm-4 col-md-4"><a class="nav-link active" href="index.html" style="color: white;">About</a></div>
+                  <div class="col-sm-4 col-md-4"><a class="nav-link" href="portfolio.html" style="color: white;">Portfolio</a></div>
+                  <div class="col-sm-4 col-md-4"><a class="nav-link" href="contact.html" style="color: white;">Contact</a></div>
+              </div>
+          </div>
       </div>
-      <div class="row">
-        <div class="col-md-4" style="background-color: rgb(83, 83, 83);">
-        </div>
-        <div class="col-md-4">
-          <h1 class="display-4" style="font-size: 20px; background: dimgray;">About Me</h1>
-          <hr>
-          <img src="https://via.placeholder.com/150" style="width: 100px; height: 100px;">
-          <p class="lead" style="background: grey;"></p>
-        </div>
-        <div class="col-md-4" style="background: rgb(82, 82, 82);"></div>
-      </div>
-    </div>
   </div>
+  <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8" style="background-color: white; top: 50px; padding-bottom: 15px; padding-top: 15px;">
+          <h1 style="color:black; font-size: medium;">About Me</h1>
+          <hr>
+          <img src="Images/profile_picture.jpg" style="width: 150px; height: 150px; float: left; padding: 15px" alt="Profile Of Luis Martinez">
+          <p style="line-height: 25px; margin-left: 30px;">My name is Luis Martinez. I was born and read here in Chicago, Illinois. I am the oldest of four children and the first in my family to attend college. I graduated from Eastern Illinois University in 2016 with a bachelor's degree in journalism. After I spent a few years working as a data entry specialist for Grubhub, I decided that it was time to look for a new career path.</p>
+          <p style="line-height: 25px; margin-left: 20px;">I am a huge fan of the Chicago Bears and WWE. I started watching WWE as a child and have grown up with wrestling as a huge part of my life. My family has always been a fan of the Chicago Bears, and I consider players such as Walter Payton and Brian Urlacher as some of the best men to ever play the sport.</p>
+          <p style="line-height: 25px; margin-left: 20px;"> I am a huge fan of the Marvel films, including the Avengers films as I had spent most of my early years growing up watching every single film since the first Iron Man film back in 2008. I also love to read and write on my spare time. I am a huge fan of Stephen King and recently finshed reading Docter Sleep. Whenever I'm not too busy, I like to play some video games on my PS4 as well.
+            </p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
   <div class="footer" style="border-style: solid; border-width: 10px 0px 0px 0px; border-color: red;">Copyright ©
   </div>
 </body>
