Made changes to navbar to match the other html files

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
 <body style="background-image: url(Images/dark-honeycomb.png);">
   <div class="container-fluid myNav">
       <div class="row">
-          <div class="col-sm-4 col-md-4 text-center" style="color: white; background-color: red;">Luis Martinez</div>
+          <div class="col-md-2"></div>
+          <div class="col-md-2 text-center" style="color: white; background-color: red; font: size 20px;">Luis Martinez</div>
           <div class="col-md-4"></div>
           <div class="col-sm-12 col-md-4 text-center">
               <div class="row">
@@ -25,7 +26,7 @@
           </div>
       </div>
   </div>
-  <div class="container" style="background-color: dimgray; margin-top: 80px; padding-top: 15px; padding-bottom: 15px;">
+  <div class="container" style="background-color: dimgray; margin-top: 80px; padding-top: 15px; padding-bottom: 15px; width: 960px;">
   <form>
       <div class="form-group">
           <label for="exampleFormControlInput1">Name</label>
