--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container-fluid myNav">
       <div class="row">
           <div class="col-md-2"></div>
-          <div class="col-md-2 text-center" style="color: white; background-color: red; font: size 20px;">Luis Martinez</div>
+          <div class="col-md-2 text-center" style="color: white; background-color: red; font-size: 20px;">Luis Martinez</div>
           <div class="col-md-4"></div>
           <div class="col-sm-12 col-md-4 text-center">
               <div class="row">
